# mnist

./: .gitignore  CMakeLists.txt  Mnist.h  README.md  grid_mnist.cpp  mnist  prog1.cpp
